# pico-vga

./: .clang-format  .gitignore  BOM.txt  CMakeLists.txt  README.md  color.pio  colorHandler.pio  game.c  game.h  hsync.pio  imgConvert.py  main.c  main.h  notes-timers.txt  notes.txt  notesv2.txt  pinout.h  sdk-chars.h  sdk.c  sdk.h  temp-notes-renderer.md  vsync.pio
docs/: BOM.txt  BOM.xlsx  features.md  hardware.md  installation.md  notes.txt  renderer.md
examples/getting-started/: CMakeLists.txt  main.c
game/: CMakeLists.txt  game.c  game.h  sprites.c
inc/: pico-vga.h
lib/: CMakeLists.txt  audio.c  controller.c  draw-2d.c  draw-3d.c  font.h  init-display.c  init.c  initDisplay.c  lib-internal.h  peripheral-mode.c  peripheralMode.c  pico-vga.h  pinout.h  render.c  sd.c  stats.c  usb.c  utils-internal.c
lib/pio/: color.pio  hsync.pio  hsync_1024x768.pio  hsync_640x480.pio  hsync_800x600.pio  vsync_1024x768.pio  vsync_640x480.pio  vsync_800x600.pio
lib/render/: render-2d.c  render.c  render.h
notes/: BOM.txt  notesv2.txt
pcb/controller/: controller.csv  controller.kicad_pcb  controller.kicad_prl  controller.kicad_pro  controller.kicad_sch  controller.xml  fp-info-cache  fp-lib-table
pcb/controller/controller.pretty/: SW_Push_1P1T_12MM_SMD_AND_THT.kicad_mod  USB_C_Receptacle_Molex_2169900003.kicad_mod  USB_C_Receptacle_Molex_2171830001.kicad_mod
pcb/pico-vga/: #auto_saved_files#  Controller.kicad_sch  ControllerInterface.kicad_sch  fp-info-cache  fp-lib-table  pico-vga.bak  pico-vga.csv  pico-vga.kicad_pcb  pico-vga.kicad_prl  pico-vga.kicad_pro  pico-vga.kicad_sch  pico-vga.kicad_sch-bak  pico-vga.kicad_sym  pico-vga.xml  sym-lib-table
pcb/pico-vga/pico-vga.pretty/: Logo.kicad_mod  MEM2061-01-188-00-A_GCT.kicad_mod  PinHeader_1x06_P2.54mm_Horizontal_SMD.kicad_mod  Raspberry_Pi_Pico.kicad_mod  STX-3000_KYC.kicad_mod
scripts/: imgConvert.py  vcocalc.py
sdk/: CMakeLists.txt  controller.c  draw-2d.c  font.h  init.c  initDisplay.c  pico-vga.h  render.c  sd.c  sdk-chars.h  sdk.c  sdk.h  usb.c  utils.c
src/: CMakeLists.txt  audio.h  color.h  color.pio  common.h  controller.xh  draw-2d.c  draw.h  lib-internal.h  pico-vga.h  pinout.h  utils-internal.c  utils.c
src/audio/: audio.c  audio.h
src/controller/: controller.x  controller.xh
src/render/: render-2d.c
src/vga/: color.h  color.pio  draw-2d.c  draw-3d.c  draw-common.c  draw.h  font.h  render-2d.c  render-3d.c  render.c  render.h  vga.c  vga.h
working-test/: CMakeLists.txt  blink copy.pio  blink.pio  main.c
